Changes
=======

2.2 (unreleased)
----------------

- Merge support for a global template registry that remove unnecessary
  warnings about unassociated templates.


2.1 (2010-11-03)
----------------

- Use an update martian and grokcore.component.

- The custom zope publication has now moved from the grok package to
  grokcore.view. The registration of the publication is optional, and is used
  by grok and the grokcore.json package.

- The util function `make_checker` has been moved from the `grok`
  package to ``grokcore.view``.

2.0 (2010-11-01)
----------------

- The `view` directive has been moved from ``grokcore.viewlet`` to
  ``grokcore.view``.

- The `IGrokSecurityView` has been moved from ``grok`` to
  ``grokcore.view``.

- Fix the url() function to behave properly while passed an empty data dict.

- Fix the url() method to accept the "status" and "trusted" arguments, passed
  on to the redirect method on the response object.

- ``grokcore.view`` no longer depends on ``zope.app.testing`` and
  related packages. Instead we now use ``zope.app.wsgi.testlayer`` to
  run functional tests.

- Made package comply to zope.org repository policy.

- Fixed launchpad bug #395061 : removed the default_fallback_to_name
  function. It can be imported from ``grokcore.security`` if needed.

- ``grokcore.view`` no longer depends on ``zope.app.zcmlfiles``. We
  removed all the extra dependencies and fixed one test that used
  ``zope.app.rotterdam`` and ``zope.app.basicskin``.

- Back-ported the changes of the 1.13 branch related to the directory
  resource registration, using the latest ztk packages.

- Factor out generally useful methods and properties for view-ish
  components into components.ViewSupport mixin.

- Works with new Martian (0.13) and grokcore.component 2.1.

- Test fix: support windows paths.

- Warnings are now emitted as log messages with level
  `logging.WARNING` to a logger named ``grokcore.view`` with level
  `logging.ERROR`.
